// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount/> matches snapshot 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-xxvp4g-1 dgvdUp"
  >
    <div>
      <div
        class="CartCount__StyledDiv-sc-xxvp4g-0 ewihSV count"
      >
        11
      </div>
    </div>
  </span>
</div>
`;

exports[`<CartCount/> updates via props 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-xxvp4g-1 dgvdUp"
  >
    <div>
      <div
        class="CartCount__StyledDiv-sc-xxvp4g-0 ewihSV count count-enter count-enter-active"
      >
        221233
      </div>
      <div
        class="CartCount__StyledDiv-sc-xxvp4g-0 ewihSV count count-exit count-exit-active"
      >
        11
      </div>
    </div>
  </span>
</div>
`;
